working on resident list formating and responsive layout issues

--- a/app/components/dashboard/tasks/tasks.component.scss
+++ b/app/components/dashboard/tasks/tasks.component.scss
@@ -3,7 +3,6 @@ tasks {
 	display: flex;
 	flex-direction: column;
 	flex: 1;
-	padding: 0 24px;
 }
 
 .test-icon{
